<resources>
    <string name="app_name">Ball Four</string>
    <string name="action_settings">Settings</string>
    <string name="preference_name">twitter_oauth"</string>

    <string name="pref_key_oauth_token">token"</string>
    <string name="pref_key_oauth_secret">tokensecret"</string>
    <string name="pref_key_twitter_login">isTwitterLogedIn"</string>

    // Twitter oauth urls
    <string name="url_twitter_auth">auth_url"</string>
    <string name="url_twitter_oauth_verifier">oauth_verifier"</string>
    <string name="url_twitter_oauth_token">oauth_token"</string>

    <string name="twitter_consumer_key">diDVXnmatUYA03689zR9v7EQs</string>
    <string name="twitter_consumer_secret">N1uwnp65Q6wXq4DBOwEzHSoxryp8X6V7iujiLyxh92TdC2jrJT</string>
    <string name="oauth_callback_scheme">x-marckirsch-oauth-twitter"</string>
    <string name="twitter_callback_url">callback://</string>

    <string name="twitterlogon_button">Twitter Logon</string>
    <string name="twitterlogoff_button">Twitter Logoff</string>
    <string name="twitterOn">Ball4 Is Setup for use with Twitter</string>
    <string name="post">Tweet</string>
    <string name="goodpost">Successful Post | </string>
    <string name="preferencesButton">Preferences</string>
    <string name="newGameButton">Score A New Game</string>
    <string name="rostersButton">Rosters</string>
    <string name="gamesButton">Review Previous Games</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_preferences">PreferencesActivity</string>
    <string name="title_activity_test_draw">TestDraw</string>
    <string name="Bats">Bats</string>
    <string name="Throws">Throws</string>
    <string name="RL">R/L</string>
    <string name="Number">Number</string>
    <string name="savePlayer">Save Player</string>
    <string name="addPlayerString">ADD PLAYER</string>
    <string name="RightHanded">R</string>
    <string name="emptyNumberString">#0</string>
    <string name="playersNameString">Players LastName, FirstName</string>
    <string name="title_team_list">Players</string>
    <string name="title_team_detail">Team Detail</string>
</resources>
