<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.marckirsch.ball4.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@android:color/black">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferencesButton"
        android:id="@+id/preferencesButton"
        android:onClick="onPreferences"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="66dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:height="120dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newGameButton"
        android:id="@+id/newGameButton"
        android:onClick="onTweet"
        android:layout_above="@+id/preferencesButton"
        android:layout_alignRight="@+id/preferencesButton"
        android:layout_alignEnd="@+id/preferencesButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:height="120dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rostersButton"
        android:id="@+id/rostersButton"
        android:onClick="onRosters"
        android:height="120dp"
        android:layout_above="@+id/newGameButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gamesButton"
        android:id="@+id/gamesButton"
        android:onClick="onTweet"
        android:height="120dp"
        android:layout_above="@+id/rostersButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
